--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,3 +1,30 @@
-body{
-    color: gray;
+@import url('https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700|Roboto:300,500');
+
+* {
+	padding: 0;
+	margin: 0;
+	font-family: 'Roboto', sans-serif;
+}
+
+body, html {
+	width: 100%;
+	height: 100%;
+	font-family: 'Roboto', sans-serif;
+	font-weight: 300;
+}
+
+.main-logo {
+  font-size: 30px;
+}
+
+.pb50 {
+  padding-bottom: 50px;
+}
+
+.pb25 {
+  padding-bottom: 25px;
+}
+
+.mb25 {
+  margin-bottom: 25px;
 }
